@@ -46,20 +46,14 @@
 #endif /* !TIME_WITH_SYS_TIME */
 #include <sys/param.h>
 #include <netinet/in.h>
-#include <limits.h>             /* MAXHOSTNAMELEN */
-#ifdef HAVE_NETDB_H
-#include <netdb.h>              /* MAXHOSTNAMELEN Solaris */
-#endif /* HAVE_NETDB_H */
 #include <freeipmi/freeipmi.h>
+
+#include "freeipmi-portability.h"
 
 #include "scbuf.h"
 
 #ifndef IPMICONSOLE_DEFS_H
 #define IPMICONSOLE_DEFS_H
-
-#ifndef MAXHOSTNAMELEN
-#define MAXHOSTNAMELEN 64
-#endif /* MAXHOSTNAMELEN */
 
 #define MAXPORTBUFLEN 16
 
@@ -243,7 +237,7 @@ typedef enum
 struct ipmiconsole_ctx_config {
 
   /* ipmi config */
-  char hostname[MAXHOSTNAMELEN+1];
+  char hostname[FREEIPMI_MAXHOSTNAMELEN+1];
   uint16_t port;
   char username[IPMI_MAX_USER_NAME_LENGTH+1];
   char password[IPMI_2_0_MAX_PASSWORD_LENGTH+1];
