@@ -1,5 +1,12 @@
 2023-12-17 Albert Chu <chu11@llnl.gov>
 
+	* Globally replace use of MAXHOSTNAMELEN with internal
+	FREEIPMI_MAXHOSTNAMELEN which is set to 256 bytes (vs the typical
+	64 bytes that MAXHOSTNAMELEN).  This allows hostnames of > 64
+	characters in length to be specified.
+
+2023-12-17 Albert Chu <chu11@llnl.gov>
+
 	* libfreeipmi/interpret: Support intepretation of physical
 	intrusion + state sensors.
 
